update navbar component size to avoid overlap

--- a/app/components/NavBarComponent/NavBarCartButton.scss
+++ b/app/components/NavBarComponent/NavBarCartButton.scss
@@ -40,7 +40,7 @@ $mobileBreakpoint: 600px;
                 }
             }
 
-            @media (min-width: 700px) {
+            @media (min-width: 701px) {
 
                 .navbar-cartWhite-image {
                     display: none;
