--- a/app/components/NavBarComponent/NavBarLoginButton.scss
+++ b/app/components/NavBarComponent/NavBarLoginButton.scss
@@ -8,6 +8,7 @@
     border-width: 1px;
     cursor: pointer;
     gap: 8px;
+    min-width: 20px;
 
     .navbar-loginButton-image {
         width: 16px;
@@ -23,15 +24,16 @@
     @media (max-width: 700px){
 
         padding: 6px 15px;
+        min-width: 20px;
 
         .navbar-loginButton-text {
             display: none;
         }
+    }
 
-        .navbar-loginButton-image {
-            min-width: 20px;
-            height: auto;
-        }
+    .navbar-loginButton-image {
+        min-width: 20px;
+        height: auto;
     }
 
 }
